# goofish-watcher

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  PROMPT.md  QOL.md  README.md  USAGE.md  config.py  docker-compose.yml  goofish-watcher.service  nightshift-dependency-risk.md  nightshift-doc-drift.md  nightshift-logging-audit.md  pyproject.toml  ralph-loop.local.md
bot/: main.py
bot/cogs/: watcher.py
bot/commands/: alert.py  login.py  logs.py  query.py  stats.py
core/: filter.py  notifier.py  parser.py  parsers.py  rotation.py  scanner.py  verifier.py  webhook_receiver.py
core/notifications/: __init__.py  bark.py  manager.py  ntfy.py  telegram.py  webhook.py
db/: models.py  store.py
tests/: test_integration.py  test_parsers.py  test_webhook_receiver.py
