[project]
name = "goofish-watcher"
version = "0.1.0"
description = "Small add-on: Goofish QR login + export Playwright state + Discord DM webhook forwarding"
requires-python = ">=3.11"

dependencies = [
    "discord.py>=2.4.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["bot*", "core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
# No async tests in this repo currently.
